sample/k8s-common/cc-stack.yaml
apiVersion: v1
kind: Service
metadata:
  name: dms
spec:
  selector:
    app: dms
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  clusterIP: None

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dms-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dms
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/dms:latest
          name: dms
          volumeMounts:
            - name: cc-certificates
              mountPath: /opt/policyserver/certificates/
              readOnly: true
          ports:
            - protocol: TCP
              containerPort: 8443
          resources:
            requests:
              cpu: 300m
              memory: 800Mi
      restartPolicy: Always
      volumes:
        - name: cc-certificates
          secret:
            secretName: cc-certificates

---

apiVersion: v1
kind: Service
metadata:
  name: dps
spec:
  selector:
    app: dps
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  clusterIP: None

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dps-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dps
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/dps:latest
          name: dps
          volumeMounts:
            - name: cc-certificates
              mountPath: /opt/policyserver/certificates/
              readOnly: true
          ports:
            - protocol: TCP
              containerPort: 8443
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
      restartPolicy: Always
      volumes:
        - name: cc-certificates
          secret:
            secretName: cc-certificates

---

apiVersion: v1
kind: Service
metadata:
  name: dac
spec:
  selector:
    app: dac
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  clusterIP: None

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dac-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dac
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/dac:latest
          name: dac
          volumeMounts:
            - name: cc-certificates
              mountPath: /opt/policyserver/certificates/
              readOnly: true
          ports:
            - protocol: TCP
              containerPort: 8443
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
      restartPolicy: Always
      volumes:
        - name: cc-certificates
          secret:
            secretName: cc-certificates

---

apiVersion: v1
kind: Service
metadata:
  name: dabs-internal
spec:
  selector:
    app: dabs-internal
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  clusterIP: None

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dabs-internal-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dabs-internal
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/dabs:latest
          name: dabs-internal
          volumeMounts:
            - name: cc-certificates
              mountPath: /opt/policyserver/certificates/
              readOnly: true
          ports:
            - protocol: TCP
              containerPort: 8443
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
      restartPolicy: Always
      volumes:
        - name: cc-certificates
          secret:
            secretName: cc-certificates

---

apiVersion: v1
kind: Service
metadata:
  name: cas
spec:
  selector:
    app: cas
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cas-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cas
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/cas:latest
          name: cas
          ports:
            - protocol: TCP
              containerPort: 8080
          resources:
            requests:
              cpu: 300m
              memory: 800Mi
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: reporter
spec:
  selector:
    app: reporter
  ports:
    - name: internal-https
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  clusterIP: None

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: reporter-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: reporter
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/inquirycenter:latest
          name: reporter
          volumeMounts:
            - name: cc-certificates
              mountPath: /opt/policyserver/certificates/
              readOnly: true
          ports:
            - protocol: TCP
              containerPort: 8443
            - protocol: TCP
              containerPort: 8080
          resources:
            requests:
              cpu: 300m
              memory: 800Mi
      restartPolicy: Always
      volumes:
        - name: cc-certificates
          secret:
            secretName: cc-certificates

---

apiVersion: v1
kind: Service
metadata:
  name: administrator
spec:
  selector:
    app: administrator
  ports:
    - name: internal-https
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  clusterIP: None

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: administrator-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: administrator
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/mgmtconsole:latest
          name: administrator
          volumeMounts:
            - name: cc-certificates
              mountPath: /opt/policyserver/certificates/
              readOnly: true
          ports:
            - protocol: TCP
              containerPort: 8443
            - protocol: TCP
              containerPort: 8080
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
      restartPolicy: Always
      volumes:
        - name: cc-certificates
          secret:
            secretName: cc-certificates

---

apiVersion: v1
kind: Service
metadata:
  name: console
spec:
  selector:
    app: console
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: console-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - image: elasticsearch:1.7-alpine
          name: es
          ports:
            - protocol: TCP
              containerPort: 9200
            - protocol: TCP
              containerPort: 9300
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/console:latest
          name: console
          ports:
            - protocol: TCP
              containerPort: 8080
          resources:
            requests:
              cpu: 300m
              memory: 800Mi
      restartPolicy: Always
