sample/k8s-common/jpc.yaml

apiVersion: v1
kind: Service
metadata:
  name: jpc
spec:
  selector:
    app: jpc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jpc-deployment
spec:
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jpc
    spec:
      containers:
        - image: 579292207088.dkr.ecr.us-west-2.amazonaws.com/platform/dpc:latest
          name: jpc
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
          ports:
            - protocol: TCP
              containerPort: 8080
      restartPolicy: Always
